Package installation for Ubuntu/Debian added. Tested on Ubuntu 14.04.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,8 @@
 ---
-# defaults file for insspb.zabbix
+zabbix_install_server: no
+zabbix_install_frontend: no
+zabbix_install_proxy: no
+zabbix_install_agent: yes
+zabbix_install_version: "3.0"
+zabbix_server_db_type: "mysql"
+zabbix_proxy_db_type: "mysql"
