--- a/vars/zabbix_proxy.yml
+++ b/vars/zabbix_proxy.yml
@@ -160,14 +160,14 @@ zabbix_proxy_DBUser: "zabbix"
 #
 # Mandatory: no
 # Default:
-zabbix_proxy_DBPassword: ""
+# zabbix_proxy_DBPassword: ""
 
 ### Option: DBSocket
 #   Path to MySQL socket.
 #
 # Mandatory: no
 # Default:
-zabbix_proxy_DBSocket: "/tmp/mysql.sock"
+zabbix_proxy_DBSocket: "/var/run/mysqld/mysqld.sock"
 
 # Option: DBPort
 #   Database port when not using local socket. Ignored for SQLite.
