PSK Key creation part

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,8 @@ zabbix_install_agent: yes
 zabbix_install_version: "3.0"
 zabbix_server_db_type: "mysql"
 zabbix_proxy_db_type: "mysql"
+zabbix_agent_TLSPSK: ""
+zabbix_proxy_TLSPSK: ""
 
 
 ################### Zabbix agent defaults ###################
