CentOS support added and checked on C6 and C7 x64

--- a/tasks/pkg-CentOs.yml
+++ b/tasks/pkg-CentOs.yml
@@ -1,1 +1,68 @@
 ---
+- name: Zabbix | Install Epel repository
+  yum:
+    name: epel-release
+    state: latest
+
+- name: Zabbix | Make sure the ansible required dependencies are installed
+  become: yes
+  yum:
+    name: python-pycurl
+    state: present
+
+- name: Zabbix | Add the Zabbix repository
+  become: yes
+  yum:
+    name: "http://repo.zabbix.com/zabbix/{{ zabbix_install_version }}/rhel/{{ ansible_distribution_major_version }}/{{ ansible_architecture }}/zabbix-release-{{ zabbix_install_version }}-1.el{{ ansible_distribution_major_version }}.noarch.rpm"
+    disable_gpg_check: yes
+    state: present
+
+- name: Zabbix | Make sure Zabbix agent is installed
+  become: yes
+  yum:
+    name: zabbix-agent
+    state: latest
+  when: "{{ zabbix_install_agent }} == True"
+
+- name: Zabbix | Make sure Zabbix agent is enabled
+  become: yes
+  service:
+    name: "{{ zabbix_agent_service_name }}"
+    enabled: yes
+  when: "{{ zabbix_install_agent }} == True"
+
+- name: Zabbix | Make sure Zabbix server is installed
+  become: yes
+  yum:
+    name: "zabbix-server-{{ zabbix_server_db_type | lower }}"
+    state: latest
+  when: "{{ zabbix_install_server }} == True"
+
+- name: Zabbix | Make sure Zabbix server is enabled
+  become: yes
+  service:
+    name: "{{ zabbix_server_service_name }}"
+    enabled: yes
+  when: "{{ zabbix_install_server }} == True"
+
+- name: Zabbix | Make sure Zabbix server frontend is installed
+  become: yes
+  yum:
+    name: "zabbix-web-{{ zabbix_server_db_type | lower }}"
+    state: latest
+  when: "{{ zabbix_install_frontend }} == True"
+
+- name: Zabbix | Make sure Zabbix proxy is installed
+  become: yes
+  yum:
+    name: "zabbix-proxy-{{ zabbix_proxy_db_type | lower }}"
+    state: latest
+  when: "{{ zabbix_install_proxy }} == True"
+
+- name: Zabbix | Make sure Zabbix proxy is enabled
+  become: yes
+  service:
+    name: "{{ zabbix_proxy_service_name }}"
+    enabled: yes
+  when: "{{ zabbix_install_proxy }} == True"
+
