--- a/tasks/pkg-Debian.yml
+++ b/tasks/pkg-Debian.yml
@@ -4,15 +4,10 @@
     pkg: python-pycurl
     state: present
 
-- name: Zabbix | Get Zabbix repo file
-  get_url:
-    url: "http://repo.zabbix.com/zabbix/{{ zabbix_install_version }}/{{ ansible_distribution | lower }}/pool/main/z/zabbix-release/zabbix-release_{{ zabbix_install_version }}-1+{{ ansible_distribution_release }}_all.deb"
-    dest: /tmp
-
 - name: Zabbix | Add the Zabbix repository
   become: yes
   apt:
-    deb: "/tmp/zabbix-release_{{ zabbix_install_version }}-1+{{ ansible_distribution_release }}_all.deb"
+    deb: "http://repo.zabbix.com/zabbix/{{ zabbix_install_version }}/{{ ansible_distribution | lower }}/pool/main/z/zabbix-release/zabbix-release_{{ zabbix_install_version }}-1+{{ ansible_distribution_release }}_all.deb"
     state: present
 
 - name: Zabbix | Update apt cache with new repo data
