Windows agent installation partly supported (no config)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,18 @@
 - include_vars: "{{ item }}"
   with_items:
     - "os_{{ ansible_os_family }}.yml"
-    
+
 - include: pkg-CentOs.yml
   when: ansible_os_family == "RedHat"
+
+- include: pkg-windows.yml
+  when: ansible_os_family == "Windows"
 
 - include: pkg-Debian.yml
   when: ansible_os_family == "Debian"
 
 - include: configure.yml
+  when: ansible_os_family != "Windows"
+
+- include: configure-windows.yml
+  when: ansible_os_family == "Windows"
