--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,18 +1,29 @@
 galaxy_info:
   author: Andrey Shpak
-  description: This role installs and configure zabbix agent, zabbix server and zabbix proxy on target host. We use zabbix 3.0 as default.
+  description: This role installs and configure zabbix agent, zabbix server and zabbix proxy on target host. We use zabbix 3.2 as default.
   license: license (MIT)
-  
-  min_ansible_version: 1.9
-  
+
+  min_ansible_version: 2.3.1
+
   github_branch: master
-  
+
   platforms:
   - name: Ubuntu
     versions:
+    - xenial
     - trusty
-  
-  galaxy_tags: 
+  - name: EL
+    versions:
+    - 6
+    - 7
+  - name: Debian
+    versions:
+    - all
+  - name: Windows
+    versions:
+    - all
+
+  galaxy_tags:
     - system
     - network
     - monitoring
