--- a/tasks/pkg-CentOs.yml
+++ b/tasks/pkg-CentOs.yml
@@ -23,17 +23,21 @@
     name: "http://repo.zabbix.com/zabbix/{{ zabbix_install_version }}/rhel/{{ ansible_distribution_major_version }}/{{ ansible_architecture }}/zabbix-release-{{ zabbix_install_version }}-1.el{{ ansible_distribution_major_version }}.noarch.rpm"
     state: present
 
-- name: Zabbix | RedHat | Install Zabbix repository gpg key
+- name: Zabbix | RedHat | Install Zabbix repository gpg keys
   become: True
   rpm_key:
     state: present
-    key: /etc/pki/rpm-gpg/RPM-GPG-KEY-ZABBIX-A14FE591
+    key: '{{ item }}'
+  with_items:
+    - '/etc/pki/rpm-gpg/RPM-GPG-KEY-ZABBIX-A14FE591'
+    - '/etc/pki/rpm-gpg/RPM-GPG-KEY-ZABBIX'
 
 - name: Zabbix | RedHat | Make sure Zabbix agent is installed
   become: yes
   yum:
     name: zabbix-agent
     state: latest
+    enablerepo: zabbix-deprecated
   when:
     - zabbix_install_agent == True
 
@@ -50,6 +54,7 @@
   yum:
     name: "zabbix-server-{{ zabbix_server_db_type | lower }}"
     state: latest
+    enablerepo: zabbix-deprecated
   when:
     - zabbix_install_server == True
 
@@ -66,6 +71,7 @@
   yum:
     name: "zabbix-web-{{ zabbix_server_db_type | lower }}"
     state: latest
+    enablerepo: zabbix-deprecated
   when:
     - zabbix_install_frontend == True
 
@@ -74,6 +80,7 @@
   yum:
     name: "zabbix-proxy-{{ zabbix_proxy_db_type | lower }}"
     state: latest
+    enablerepo: zabbix-deprecated
   when:
     - zabbix_install_proxy == True
 
