--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,8 +4,10 @@ zabbix_install_frontend: no
 zabbix_install_proxy: no
 zabbix_install_agent: yes
 zabbix_install_version: "3.2"
-zabbix_server_db_type: "mysql"
-zabbix_proxy_db_type: "mysql"
+zabbix_server_db_type: "sqlite3"
+# Options available: mysql, pgsql, sqlite3
+zabbix_proxy_db_type: "sqlite3"
+# Options available: mysql, pgsql, sqlite3
 zabbix_agent_TLSPSK: ""
 zabbix_proxy_TLSPSK: ""
 
@@ -20,13 +22,13 @@ zabbix_agent_DebugLevel: 3
 zabbix_agent_SourceIP: ""
 zabbix_agent_EnableRemoteCommands: 0
 zabbix_agent_LogRemoteCommands: 0
-zabbix_agent_Server: 
+zabbix_agent_Server:
     - "127.0.0.1"
 zabbix_agent_ListenPort: 10050
-zabbix_agent_ListenIP: 
+zabbix_agent_ListenIP:
     - "0.0.0.0"
 zabbix_agent_StartAgents: 3
-zabbix_agent_ServerActive: 
+zabbix_agent_ServerActive:
     - "127.0.0.1"
 zabbix_agent_Hostname: "{{ inventory_hostname }}"
 zabbix_agent_HostnameItem: "system.hostname"
@@ -41,7 +43,7 @@ zabbix_agent_Timeout: 3
 zabbix_agent_AllowRoot: 0
 zabbix_agent_User: "zabbix"
 zabbix_agent_PerfCounter: []
-zabbix_agent_Include: 
+zabbix_agent_Include:
     - "/etc/zabbix/zabbix_agentd.d/"
 zabbix_agent_Include_Windows: []
 zabbix_agent_UnsafeUserParameters: 0
@@ -75,7 +77,7 @@ zabbix_proxy_LogFileSize: 1
 zabbix_proxy_DebugLevel: 3
 zabbix_proxy_PidFile: "/var/run/zabbix/zabbix_proxy.pid"
 zabbix_proxy_DBHost: "localhost"
-zabbix_proxy_DBName: "zabbix_proxy"
+zabbix_proxy_DBName: "/var/lib/sqlite3/zabbix_proxy"
 zabbix_proxy_DBSchema: ""
 zabbix_proxy_DBUser: "zabbix"
 zabbix_proxy_DBPassword: ""
@@ -103,7 +105,7 @@ zabbix_proxy_VMwareCacheSize: "8M"
 zabbix_proxy_VMwareTimeout: 10
 zabbix_proxy_SNMPTrapperFile: "/tmp/zabbix_traps.tmp"
 zabbix_proxy_StartSNMPTrapper: 0
-zabbix_proxy_ListenIP: 
+zabbix_proxy_ListenIP:
     - "0.0.0.0"
 zabbix_proxy_HousekeepingFrequency: 1
 zabbix_proxy_CacheSize: "8M"
@@ -175,7 +177,7 @@ zabbix_server_VMwareCacheSize: "8M"
 zabbix_server_VMwareTimeout: 10
 zabbix_server_SNMPTrapperFile: "/tmp/zabbix_traps.tmp"
 zabbix_server_StartSNMPTrapper: 0
-zabbix_server_ListenIP: 
+zabbix_server_ListenIP:
     - "0.0.0.0"
 zabbix_server_HousekeepingFrequency: 1
 zabbix_server_MaxHousekeeperDelete: 5000
