--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,7 @@ zabbix_install_proxy: no
 zabbix_install_agent: yes
 zabbix_install_version: "3.2"
 zabbix_server_db_type: "sqlite3"
-# Options available: mysql, pgsql, sqlite3
+# Options available: mysql, pgsql
 zabbix_proxy_db_type: "sqlite3"
 # Options available: mysql, pgsql, sqlite3
 zabbix_agent_TLSPSK: ""
