Fixes deprecated repo absent in CentOS 7 Related #13

--- a/tasks/pkg-CentOs-frontend.yml
+++ b/tasks/pkg-CentOs-frontend.yml
@@ -5,3 +5,15 @@
     name: "zabbix-web-{{ zabbix_server_db_type | lower }}"
     state: latest
     enablerepo: zabbix-deprecated
+  when:
+    - ansible_distribution_major_version == "6"
+
+- name: Zabbix | RedHat | Make sure Zabbix server frontend is installed
+  become: yes
+  yum:
+    name: "zabbix-web-{{ zabbix_server_db_type | lower }}"
+    state: latest
+    enablerepo: zabbix-deprecated
+  when:
+    - ansible_distribution_major_version == "7"
+
